--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fritzapi",
-  "version": "0.12.0",
+  "version": "0.13.0-pre00",
   "author": "Andreas Goetz <cpuidle@gmx.de>",
   "description": "Home automation node API for Fritz!Box, Fritz!DECT and FRITZ!Powerline devices",
   "homepage": "https://github.com/andig/fritzapi",
@@ -17,6 +17,10 @@
     {
       "name": "Danny Falss",
       "email": "github@falss.de"
+    },
+    {
+      "name": "David Nagy",
+      "email": "david.nagy@quinto.io"
     }
   ],
   "keywords": [
@@ -34,32 +38,53 @@
     "Fritz!DECT 301",
     "SmartHome",
     "SmartFritz",
-    "AHA"
+    "AHA",
+    "Typescript",
+    "Async"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andig/fritzapi.git"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "pretest": "node_modules/jshint/bin/jshint index.js",
-    "test": "NODE_ENV=test mocha './test/**/*.spec.js'",
-    "coverage": "istanbul cover _mocha"
+    "bulid": "tsc",
+    "test": "jest --runInBand",
+    "lint": "eslint src",
+    "coverage": "jest --runInBand --ci --collectCoverage   --coverageDirectory=\"./coverage\"  --reporters=default",
+    "makeDocs": "typedoc"
   },
   "dependencies": {
-    "bluebird": "^3.7.2",
-    "cheerio": "^0.22.0",
+    "axios": "^0.24.0",
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.1.0",
     "csv": "^5.3.2",
-    "extend": "^3.0.2",
-    "request": "^2.88.2",
-    "xml2json-light": "^1.0.6"
+    "xml2json": "^0.12.0"
   },
   "devDependencies": {
-    "chai": "4.2.x",
-    "istanbul": "^0.4.5",
-    "jshint": "^2.10.2",
-    "mocha": "^8.0.1"
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.4",
+    "@types/react": "^17.0.32",
+    "@types/xml2json": "^0.11.4",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.3.1",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4",
+    "ts-node": "^10.4.0",
+    "ts-jest": "^27.0.7",
+    "typedoc": "^0.22.7"
   }
 }
