--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-TUSER=fritzxxx
-TPW=userpw
-TURL=http://192.168.178.1
+T_USER=<USER>
+T_PW=<PASSWORD>
+T_URL=http://192.168.178.1
+T_DEVICE_COUNT=2
+T_BULB_COUNT=1
+T_AIN=<DEVICE_IDENT>
