--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fritzapi",
-  "version": "0.13.0-pre00",
+  "version": "0.13.0-pre02",
   "author": "Andreas Goetz <cpuidle@gmx.de>",
   "description": "Home automation node API for Fritz!Box, Fritz!DECT and FRITZ!Powerline devices",
   "homepage": "https://github.com/andig/fritzapi",
@@ -60,11 +60,13 @@
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.1.0",
     "csv": "^5.3.2",
+    "qs": "^6.10.1",
     "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.4",
+    "@types/qs": "^6.9.7",
     "@types/react": "^17.0.32",
     "@types/xml2json": "^0.11.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -82,9 +84,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.4",
-    "ts-node": "^10.4.0",
     "ts-jest": "^27.0.7",
-    "typedoc": "^0.22.7"
+    "ts-node": "^10.4.0",
+    "typedoc": "^0.22.7",
+    "typescript": "^4.4.4"
   }
 }
