--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fritzapi",
-  "version": "0.13.0-pre02",
+  "version": "0.13.0-pre03",
   "author": "Andreas Goetz <cpuidle@gmx.de>",
   "description": "Home automation node API for Fritz!Box, Fritz!DECT and FRITZ!Powerline devices",
   "homepage": "https://github.com/andig/fritzapi",
@@ -52,14 +52,16 @@
     "bulid": "tsc",
     "test": "jest --runInBand",
     "lint": "eslint src",
-    "coverage": "jest --runInBand --ci --collectCoverage   --coverageDirectory=\"./coverage\"  --reporters=default",
-    "makeDocs": "typedoc"
+    "coverage": "jest --runInBand --ci --collectCoverage   --coverageDirectory=\"./docs/coverage\"",
+    "typedoc": "typedoc",
+    "makeDoc": "npm run typedoc && npm run coverage"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.1.0",
     "csv": "^5.3.2",
+    "jest-html-reporter": "^3.4.1",
     "qs": "^6.10.1",
     "xml2json": "^0.12.0"
   },
