--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,7 @@
   },
   "rules": {
     "no-plusplus": "warn",
-    "import/no-cycle":"warn",
+    "@typescript-eslint/no-explicit-any":"warn",
     "no-bitwise": "warn",
     "no-restricted-syntax": "warn",
     "no-underscore-dangle": "warn",
