--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Elschnagoo/fritzapi.git"
+    "url": "git+https://github.com/tantchen/fritzapi.git"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
