--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tantchen/fritzapi",
-  "version": "0.13.8",
-  "author": "David Nagy <david.nagy@quinto.io>",
+  "version": "0.14.0",
+  "author": "Gerald Uhlig",
   "description": "Home automation node API for Fritz!Box, Fritz!DECT and FRITZ!Powerline devices",
   "homepage": "https://elschnagoo.github.io/fritzapi/",
   "license": "MIT",
@@ -57,13 +57,12 @@
     "makeDoc": "npm run typedoc && npm run coverage"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "qs": "^6.11.2",
-    "xml2json": "^0.12.0"
+    "axios": "^1.7.9",
+    "fast-xml-parser": "^5.0.6",
+    "qs": "^6.14.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
-    "jest-html-reporter": "^3.10.2",
     "@types/node": "^20.6.0",
     "@types/qs": "^6.9.8",
     "@types/react": "^18.2.21",
@@ -82,6 +81,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
+    "jest-html-reporter": "^3.10.2",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
